--- a/css/style.css
+++ b/css/style.css
@@ -1,61 +1,68 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  height: 100vh;
+  width: 100vw;
+}
+
+body {
+  height: 98%;
+  width: 98%;
+  background: #440909;
+  overflow: hidden;
+  border: 7px double yellow;
+}
+
+.container {
+  height: 100%;
+}
+
+
 /* /////////////////////////////////////////
             LOGO CONTAINER
 ///////////////////////////////////////// */
 
-div#logoWrapper span {
+#logoWrapper span {
   display: block;
   width: 100px;
-  border: 7px solid white;
+  border: 2px solid #440909;
   height: 32px;
   position: absolute;
   top: 90px;
-  left: 90px;
-  background-color: #333;
+  left: 93px;
+  background: linear-gradient( #440909,  yellow);
   transform-origin: top right;
   z-index: -4;
 }
 
-div#logo {
+#logo {
   border-radius: 50%;
-  border: 33px solid #fff;
-  width: 166px;
-  height: 153px;
+  border: 25px solid #440909;
+  width: 200px;
+  height: 200px;
   position: relative;
-  left: 2px;
-  top: -9px;
+  left: 5px;
+  top: 3px;
+  z-index: -4;
 }
 
-span#logo1 {
-  transform: translate(-35px, 55px) rotate(0deg);
-}
+span#logo1 { transform: translate(-35px, 55px) rotate(0deg); }
 
-span#logo2 {
-  transform: translate(-70px, 90px) rotate(45deg);
-}
+span#logo2 { transform: translate(-70px, 90px) rotate(45deg); }
 
-span#logo3 {
-  transform: translate(-130px, 70px) rotate(90deg);
-}
+span#logo3 { transform: translate(-130px, 70px) rotate(90deg); }
 
-span#logo4 {
-  transform: translate(-160px, 20px) rotate(135deg);
-}
+span#logo4 { transform: translate(-160px, 20px) rotate(135deg); }
 
-span#logo5 {
-  transform: translate(-145px, -35px) rotate(180deg);
-}
+span#logo5 { transform: translate(-145px, -35px) rotate(180deg); }
 
-span#logo6 {
-  transform: translate(-95px, -60px) rotate(225deg);
-}
+span#logo6 { transform: translate(-95px, -60px) rotate(225deg); }
 
-span#logo7 {
-  transform: translate(-45px, -45px) rotate(270deg);
-}
+span#logo7 { transform: translate(-45px, -45px) rotate(270deg); }
 
-span#logo8 {
-  transform: translate(-20px, 5px) rotate(315deg);
-}
+span#logo8 { transform: translate(-20px, 5px) rotate(315deg); }
 
 h1 {
   font-family: "Univers LT 55";
@@ -67,6 +74,8 @@ h1 {
   left: 150px;
   text-align: left;
   line-height: 50px;
+  color: yellowgreen;
+  text-shadow: 0px 0px 12px black;
 }
 
 h1 span {
@@ -75,16 +84,17 @@ h1 span {
   display: block;
   letter-spacing: 20px;
   text-indent: 30px;
+  color: yellow;
 }
 
 @keyframes spinner {
   0% {
-      transform: translate(800px, -25px) rotate(378px);
+      transform: translate(800px, -25px) rotate(378deg);
       opacity: 0.5;
       margin-left: 100%;
   }
   100% {
-      transform: translate(2px, -25px) rotate(-56px);
+      transform: translate(2px, -25px) rotate(-56deg);
       opacity: 1;
       margin-left: 0%;
   }
@@ -100,10 +110,20 @@ h1 span {
   animation: spinner 1.5s 2s linear both;
 }
 
-
 /* /////////////////////////////////////////
             SLOT CONTAINER
 ///////////////////////////////////////// */
+
+#slotMachine {
+  display: flex;
+  flex-flow: column;
+  width: 75%;
+  height: 75vh;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: auto;
+  position: relative;
+}
 
 ul {
   padding: 0;
@@ -114,8 +134,9 @@ ul {
 .jSlots-wrapper {
   overflow: hidden;
   height: 100px;
+  width: 502px;
   display: inline-block;
-  border: 1px solid #999;
+  border: 5px solid yellow;
 }
 
 .slot {
@@ -123,10 +144,10 @@ ul {
 }
 
 .container .slot li {
-  width: 100px;
-  line-height: 98px;
+  width: 98px;
+  line-height: 100px;
   text-align: center;
-  font-size: 70px;
+  font-size: 77px;
   font-weight: bold;
   color: #fff;
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8);
@@ -137,7 +158,6 @@ ul {
 .container .slot:first-child li {
   border-left: none;
 }
-
 
 /* .container .slot li:nth-child(7) {
   background-color: rgba(23, 150, 48, 0.851);
@@ -211,7 +231,6 @@ ul {
   }
 }
 
-
 /* .winner li {
   animation: winnerBox 2s infinite linear;
 } */
@@ -220,3 +239,31 @@ ul {
 /* .winner li span {
   animation: winnerBox 2s infinite linear;
 } */
+
+#playSlot, #resetSlot {
+  padding: 5px 20px;
+  font-size: 25px;
+  background: linear-gradient( #440909,  yellow);
+  outline: none;
+}
+
+#playSlot:hover, #resetSlot:hover {
+  text-shadow: 1px 1px 25px white;
+}
+
+#results {
+  position: absolute;
+  top: 2em;
+  font-size: 34px;
+  color: yellow;
+  text-shadow: 1px 1px 1px black;
+  text-align: center;
+}
+
+#attempts {
+  position: absolute;
+  top: 13em;
+  font-size: 24px;
+  color: yellow;
+  text-shadow: 1px 1px 1px black;
+}
