--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ body {
             LOGO CONTAINER
 ///////////////////////////////////////// */
 
+#head {
+  margin-top: 2em;
+}
+
 #logoWrapper span {
   display: block;
   width: 100px;
@@ -118,7 +122,7 @@ h1 span {
   display: flex;
   flex-flow: column;
   width: 75%;
-  height: 75vh;
+  height: 69vh;
   justify-content: space-evenly;
   align-items: center;
   margin: auto;
