--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ h1 span {
   0% {
       transform: translate(800px, -25px) rotate(378deg);
       opacity: 0.5;
-      margin-left: 100%;
+      margin-left: 50%;
   }
   100% {
       transform: translate(2px, -25px) rotate(-56deg);
@@ -111,7 +111,7 @@ h1 span {
   animation-name: spin;
   animation-duration: 2s;
   transform: rotate(-18deg);
-  animation: spinner 1.5s 2s linear both;
+  animation: spinner 1s 2s linear both;
 }
 
 /* /////////////////////////////////////////
@@ -163,86 +163,9 @@ ul {
   border-left: none;
 }
 
-/* .container .slot li:nth-child(7) {
-  background-color: rgba(23, 150, 48, 0.851);
-}
-
-.container .slot li:nth-child(6) {
-  background-color: rgb(17, 99, 187);
-}
-
-.container .slot li:nth-child(5) {
-  background-color: #FF8645;
-}
-
-.container .slot li:nth-child(4) {
-  background-color: rgb(135, 37, 7);
-}
-
-.container .slot li:nth-child(3) {
-  background-color: rgb(155, 13, 16);
-}
-
-.container .slot li:nth-child(2) {
-  background-color: rgb(155, 69, 69);
-}
-
-.container .slot li:nth-child(1),
-.container .slot li:nth-child(8) {
-  background-color: rgb(212, 0, 255);
-} */
-
 .container .slot li span {
   display: block;
 }
-
-
-/* /////////////////////////////////////////
-              ANIMATIONS
-///////////////////////////////////////// */
-
-@keyframes winner {
-  0%,
-  50%,
-  100% {
-      transform: rotate(0deg);
-      font-size: 70px;
-      color: #fff;
-  }
-  25% {
-      transform: rotate(20deg);
-      font-size: 90px;
-      color: #FF16D8;
-  }
-  75% {
-      transform: rotate(-20deg);
-      font-size: 90px;
-      color: #FF16D8;
-  }
-}
-
-@keyframes winnerBox {
-  0%,
-  50%,
-  100% {
-      box-shadow: inset 0 0 0px yellow;
-      background-color: #FF0000;
-  }
-  25%,
-  75% {
-      box-shadow: inset 0 0 30px yellow;
-      background-color: aqua;
-  }
-}
-
-/* .winner li {
-  animation: winnerBox 2s infinite linear;
-} */
-
-
-/* .winner li span {
-  animation: winnerBox 2s infinite linear;
-} */
 
 #playSlot, #resetSlot {
   padding: 5px 20px;
@@ -266,12 +189,12 @@ ul {
 
 #attempts {
   position: absolute;
-  top: 12em;
+  top: 11em;
   font-size: 24px;
+  line-height: 37px;
   color: yellow;
   text-shadow: 1px 1px 1px black;
 }
-
 
 /* /////////////////////////////////////////
               MEDIA QUERY
