--- a/css/style.css
+++ b/css/style.css
@@ -291,8 +291,9 @@ ul {
     height: 65px;
   }
 
-  img {
-    width: 100%;
-    height: 100%;
+  .centered {
+    display: flex;
+    justify-content: center;
+    align-item: center;
   }
 }
